# aws-ai-study-assistant

./: .gitignore  Makefile  README.md
.github/workflows/: backend.yml  frontend.yml  terraform.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: domain.py  progress.py  question.py
backend/app/routers/: progress.py  quiz.py
backend/app/services/: adaptive.py  answer_token.py  explanation.py  progress.py  question_gen.py  vector_store.py
backend/scripts/: create_index.py  ingest.py
backend/tests/unit/: test_adaptive.py  test_answer_token.py  test_progress_service.py
data/whitepapers/responsible-ai/: responsible-ai-concepts.txt
data/whitepapers/security-governance/: ai-security-governance.txt
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  progress.ts  quiz.ts
frontend/src/components/Auth/: LoginPage.tsx  ProtectedRoute.tsx  SignUpPage.tsx
frontend/src/components/Dashboard/: AccuracyRadar.tsx  DomainScoreCard.tsx
frontend/src/components/Layout/: Navbar.tsx
frontend/src/components/Quiz/: AnswerFeedback.tsx  QuestionCard.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: DashboardPage.tsx  QuizPage.tsx
frontend/src/types/: index.ts
terraform/: api_gateway.tf  backend.tfvars  cloudfront.tf  cognito.tf  dns.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  secrets.tf  variables.tf
